--- a/.air.toml
+++ b/.air.toml
@@ -4,21 +4,21 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "tmp\\main.exe"
-  cmd = "go build -o ./tmp/main.exe ./cmd/api" 
+  bin = "main"
+  cmd = "go build -o ./tmp/main ./cmd/api" 
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
-  include_dir = ["."] 
+  full_bin = "./tmp/main"
+  include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
-  poll = true
+  poll = false
   poll_interval = 0
   post_cmd = []
   pre_cmd = []
